Added Tags table
Added Tags and Trail_Tags tables to the SQL
Linked tables to Trails
Added CRUD for admins on Tags
Updated Views for all and logged in users
